[package]
name = "csv-runtime"
version = "0.1.0"
edition = "2024"
description = "CSV Protocol runtime orchestration engine"
license = "MIT OR Apache-2.0"

[dependencies]
csv-adapter-core = { path = "../csv-adapters/csv-adapter-core" }
csv-protocol = { path = "../csv-protocol" }
csv-verifier = { path = "../csv-verifier" }
csv-proof = { path = "../csv-proof" }
csv-hash = { path = "../csv-hash" }
csv-wire = { path = "../csv-wire" }
# default-features off so RocksDB (native C++, wasm-incompatible) is pulled in ONLY via
# the `persistent` feature — keeps the `--no-default-features` wasm build clean.
csv-storage = { path = "../csv-storage", default-features = false }
csv-codec = { path = "../csv-codec" }
csv-coordinator = { path = "../csv-coordinator" }
csv-admission = { path = "../csv-admission" }
csv-observability = { path = "../csv-observability" }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
async-trait = "0.1"
uuid = { version = "1.1", features = ["v4", "serde"] }
serde_json = "1.0"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"

# csv-runtime is native-only (depends on tokio net, etc.)
# wasm32 is not supported - see compile_error! in lib.rs
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
csv-codec = { path = "../csv-codec" }
csv-hash = { path = "../csv-hash" }
csv-proof = { path = "../csv-proof" }
csv-testkit = { path = "../csv-testkit" }
ed25519-dalek = "2"

[features]
default = ["persistent"]
persistent = ["csv-storage/rocksdb", "dep:rocksdb"]
postgres = ["csv-storage/postgres"]
serde = []

[dependencies.rocksdb]
version = "0.22"
optional = true

[lints]
workspace = true
