[package]
name = "csv-schema"
version = "0.1.5"
edition = "2024"
rust-version.workspace = true
description = "CSV Schema - Schema registry and validation"

[dependencies]
csv-codec = { version = "0.1.5", path = "../csv-codec" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4.3"
thiserror = "1.0"
