[package]
name = "csv-sdk"
version = "0.1.5"
edition = "2024"
description = "Unified SDK for CSV (Client-Side Validation) protocol — single entry point for all CSV operations"
license = "MIT OR Apache-2.0"
authors = ["Amin Razavi"]
repository = "https://github.com/diewan/parwana"
homepage = "https://github.com/diewan/parwana"
documentation = "https://docs.rs/csv-sdk"
readme = "README.md"
keywords = ["blockchain", "cryptography", "csv-validation", "cross-chain", "smart-contracts"]
categories = ["cryptography::cryptocurrencies", "authentication"]
publish = true
rust-version.workspace = true

[lib]
doctest = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Core — always included
csv-protocol = { version = "0.1.5", path = "../csv-protocol" }
csv-hash = { version = "0.1.5", path = "../csv-hash" }
csv-proof = { version = "0.1.5", path = "../csv-proof" }
csv-verifier = { version = "0.1.5", path = "../csv-verifier" }
csv-p2p = { version = "0.1.5", path = "../csv-p2p", optional = true }
csv-chain-ports = { version = "0.1.5", path = "../csv-chain-ports" }
# Remote chain-dispatch adapter (WASM-REMOTE-001). wasm-clean; the reqwest HTTP
# transport rides its `http` feature (on by default) and compiles on wasm too.
csv-remote = { version = "0.1.5", path = "../csv-adapters/csv-remote" }

# Chain adapters — optional, enabled via feature flags
# csv-bitcoin compiles for all targets
csv-bitcoin = { version = "0.1.5", path = "../csv-adapters/csv-bitcoin", optional = true }
# csv-ethereum, csv-sui, csv-aptos, csv-solana depend on C libraries (c-kzg, etc.)
# that don't compile for wasm32 — see target-specific dependencies below

# Persistence
csv-store = { version = "0.1.5", path = "../csv-store", optional = true }
csv-storage = { version = "0.1.5", path = "../csv-storage", optional = true }
csv-runtime = { version = "0.1.5", path = "../csv-runtime" }
csv-codec = { version = "0.1.5", path = "../csv-codec" }
csv-wire = { version = "0.1.5", path = "../csv-wire" }
csv-observability = { version = "0.1.5", path = "../csv-observability" }

# Key management
csv-keys = { version = "0.1.5", path = "../csv-keys" }

# Async runtime
tokio = { version = "1", features = ["rt", "macros", "sync", "time"], optional = true }
async-std = { version = "1", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { workspace = true, features = ["Window", "Document", "HtmlElement", "console"], optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }

# Serialization / utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4.3"
bs58 = "0.5"
blake2 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
log = "0.4"
toml = "0.8"
dirs = { version = "5.0", optional = true }
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"], optional = true }
sqlx = { version = "0.8.2", features = ["sqlite", "_rt-tokio", "tls-rustls", "chrono"], optional = true }

# Optional: bring in chain-specific heavy deps when full chain support is needed
bitcoin = { version = "0.32", features = ["serde", "rand"], optional = true }
ed25519-dalek = { version = "2.0", features = ["rand_core"], optional = true }
bip32 = { version = "0.5", features = ["std", "mnemonic"], optional = true }
solana-sdk = { version = "3.0", optional = true }
k256 = { version = "0.13", features = ["ecdsa"], optional = true }
tiny-hderive = { version = "0.3", optional = true }

# Chain adapters that depend on C libraries (c-kzg, etc.) which don't compile for wasm32
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
csv-ethereum = { version = "0.1.5", path = "../csv-adapters/csv-ethereum", optional = true }
csv-sui = { version = "0.1.5", path = "../csv-adapters/csv-sui", optional = true }
csv-aptos = { version = "0.1.5", path = "../csv-adapters/csv-aptos", optional = true }
csv-solana = { version = "0.1.5", path = "../csv-adapters/csv-solana", optional = true }
# The adapter factory bundles all concrete chain adapters, so it is native-only.
# On wasm32 the runtime-coordinator feature still builds the TransferCoordinator,
# but the adapter registry stays empty (fail closed) until remote dispatch to a
# native host is wired in (WASM-REMOTE-001).
csv-adapter-factory = { version = "0.1.5", path = "../csv-adapter-factory", optional = true, features = [
    "bitcoin",
    "ethereum",
    "sui",
    "aptos",
    "solana",
] }

[features]
default = ["std", "tokio", "native"]
std = []

# Chain features
bitcoin = ["dep:csv-bitcoin", "dep:bitcoin", "csv-bitcoin/signet-rest"]
ethereum = ["dep:csv-ethereum", "csv-ethereum/rpc"]
sui = ["dep:csv-sui", "dep:ed25519-dalek", "csv-sui/rpc"]
aptos = ["dep:csv-aptos", "csv-aptos/rpc", "dep:ed25519-dalek"]
solana = ["dep:csv-solana", "csv-solana/rpc"]
all-chains = ["bitcoin", "ethereum", "sui", "aptos", "solana"]

# RPC features for chain queries
rpc = [
    "bitcoin",
    "ethereum",
    "csv-bitcoin/rpc",
    "csv-bitcoin/signet-rest",
    "csv-ethereum/rpc",
]

# Runtime features
tokio = ["dep:tokio"]
async-std = ["dep:async-std"]
wasm = ["dep:wasm-bindgen-futures", "dep:web-sys", "dep:gloo-timers"]

# Storage features
sqlite = ["dep:csv-store", "dep:sqlx", "dep:chrono"]
in-memory = []

# Cross-chain persistence (SC-02)
cross-chain-persist = ["dep:csv-storage", "dep:sqlx", "dep:chrono"]

# Runtime coordinator integration (full TransferCoordinator support)
# Portable coordinator core (stores, journal, TransferCoordinator). The concrete
# chain adapters ride along automatically on native targets only: the factory is
# a target-scoped dependency (see below), so `dep:csv-adapter-factory` is a
# no-op on wasm32 and the coordinator runs against an empty, fail-closed
# adapter registry there.
runtime-coordinator = ["dep:csv-storage", "csv-storage/redb", "csv-runtime/persistent", "tokio", "dep:csv-adapter-factory"]

# Wallet / crypto
wallet = ["dep:ed25519-dalek", "dep:bip32", "dep:k256", "dep:tiny-hderive"]

# P2P proof delivery.
# ROADMAP-P2P-001 decision: this remains an SDK opt-in feature. The shipped
# csv-cli does not enable it until P2P consignment delivery has an operator
# runbook and stable CLI workflow; see csv-docs/CONCEPTS.md "future" table.
p2p = ["dep:csv-p2p"]

# Native-only features (require non-wasm32 target)
# Enables dirs (filesystem access), tokio full runtime, and chain adapters
# that depend on C libraries (c-kzg, etc.)
native = ["dep:dirs"]

# Experimental features
experimental = []

[dev-dependencies]
rand = "0.8"
tempfile = "3"
csv-store = { version = "0.1.5", path = "../csv-store" }

[lints]
workspace = true
