[package]
name = "csv-sdk"
version = "0.1.5"
edition = "2024"
description = "Unified SDK for CSV (Client-Side Validation) protocol — single entry point for all CSV operations"
license = "MIT OR Apache-2.0"
authors = ["Amin Razavi"]
repository = "https://github.com/diewan/parwana"
homepage = "https://github.com/diewan/parwana"
documentation = "https://docs.rs/csv-sdk"
readme = "README.md"
keywords = ["blockchain", "cryptography", "csv-validation", "cross-chain", "smart-contracts"]
categories = ["cryptography::cryptocurrencies", "authentication"]
publish = true
rust-version.workspace = true

[lib]
doctest = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Core — always included
csv-protocol = { version = "0.1.5", path = "../csv-protocol", optional = true }
csv-accountability = { version = "0.1.5", path = "../csv-accountability", optional = true }
csv-accountability-verify = { version = "0.1.5", path = "../csv-accountability-verify", optional = true }
csv-hash = { version = "0.1.5", path = "../csv-hash", optional = true }
csv-proof = { version = "0.1.5", path = "../csv-proof", optional = true }
csv-verifier = { version = "0.1.5", path = "../csv-verifier", optional = true }
csv-p2p = { version = "0.1.5", path = "../csv-p2p", optional = true }
csv-chain-ports = { version = "0.1.5", path = "../csv-chain-ports", optional = true }
# Remote chain-dispatch adapter (WASM-REMOTE-001). wasm-clean; the reqwest HTTP
# transport rides its `http` feature (on by default) and compiles on wasm too.
csv-remote = { version = "0.1.5", path = "../csv-adapters/csv-remote", optional = true }

# Chain adapters — optional, enabled via feature flags
# csv-bitcoin compiles for all targets
csv-bitcoin = { version = "0.1.5", path = "../csv-adapters/csv-bitcoin", optional = true }
# csv-ethereum, csv-sui, csv-aptos, csv-solana depend on C libraries (c-kzg, etc.)
# that don't compile for wasm32 — see target-specific dependencies below

# Persistence
# default-features = false so enabling csv-store (e.g. via consumer-wallet for
# browser storage) does NOT drag in its default `sqlite` feature, which pulls
# rusqlite/bundled (libsqlite3-sys) and cannot compile to wasm32. Native SQLite
# is re-enabled explicitly by the `sqlite` feature below.
csv-store = { version = "0.1.5", path = "../csv-store", optional = true, default-features = false }
csv-storage = { version = "0.1.5", path = "../csv-storage", optional = true }
csv-runtime = { version = "0.1.5", path = "../csv-runtime", optional = true }
csv-codec = { version = "0.1.5", path = "../csv-codec", optional = true }
csv-wire = { version = "0.1.5", path = "../csv-wire", optional = true, default-features = false }
csv-observability = { version = "0.1.5", path = "../csv-observability", optional = true }

# Key management
csv-keys = { version = "0.1.5", path = "../csv-keys", optional = true, features = ["wasm", "production"] }
csv-wallet = { version = "0.1.5", path = "../csv-wallet", optional = true }

# Async runtime
tokio = { version = "1", features = ["rt", "macros", "sync", "time"], optional = true }
async-std = { version = "1", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { workspace = true, features = ["Window", "Document", "HtmlElement", "console"], optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }

# Serialization / utilities
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = { version = "1.0", optional = true }
hex = { version = "0.4.3", optional = true }
bs58 = { version = "0.5", optional = true }
blake2 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
sha3 = { version = "0.10", optional = true }
log = { version = "0.4", optional = true }
toml = { version = "0.8", optional = true }
dirs = { version = "5.0", optional = true }
rand = { version = "0.8", optional = true }
uuid = { version = "1.0", features = ["v4", "serde"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
sqlx = { version = "0.8.2", features = ["sqlite", "_rt-tokio", "tls-rustls", "chrono"], optional = true }

# Optional: bring in chain-specific heavy deps when full chain support is needed
bitcoin = { version = "0.32", features = ["serde", "rand"], optional = true }
ed25519-dalek = { version = "2.0", features = ["rand_core"], optional = true }
bip32 = { version = "0.5", features = ["std", "mnemonic"], optional = true }
solana-sdk = { version = "3.0", optional = true }
k256 = { version = "0.13", features = ["ecdsa"], optional = true }
tiny-hderive = { version = "0.3", optional = true }

# Chain adapters that depend on C libraries (c-kzg, etc.) which don't compile for wasm32
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
csv-ethereum = { version = "0.1.5", path = "../csv-adapters/csv-ethereum", optional = true }
csv-sui = { version = "0.1.5", path = "../csv-adapters/csv-sui", optional = true }
csv-aptos = { version = "0.1.5", path = "../csv-adapters/csv-aptos", optional = true }
csv-solana = { version = "0.1.5", path = "../csv-adapters/csv-solana", optional = true }
# The adapter factory bundles all concrete chain adapters, so it is native-only.
# On wasm32 the runtime-coordinator feature still builds the TransferCoordinator,
# but the adapter registry stays empty (fail closed) until remote dispatch to a
# native host is wired in (WASM-REMOTE-001).
csv-adapter-factory = { version = "0.1.5", path = "../csv-adapter-factory", optional = true, features = [
    "bitcoin",
    "ethereum",
    "sui",
    "aptos",
    "solana",
] }

[features]
default = ["std", "tokio", "native", "client"]
std = []

# Parwana's primary client SDK: protocol, transfer, wallet, and runtime APIs.
# This remains the default product surface. It is a named capability—not a
# compatibility or deprecation tier—so optional add-ons can compile separately.
client = [
    "dep:csv-protocol", "dep:csv-hash", "dep:csv-proof", "dep:csv-verifier",
    "dep:csv-chain-ports", "dep:csv-remote", "dep:csv-runtime", "dep:csv-codec",
    "dep:csv-wire", "dep:csv-observability", "dep:csv-keys", "dep:serde", "dep:serde_json",
    "dep:thiserror", "dep:hex", "dep:bs58", "dep:blake2", "dep:sha2",
    "dep:sha3", "dep:log", "dep:toml", "dep:rand", "dep:uuid",
]

# Optional Accountability protocol facade. Consumers opt into this capability
# explicitly; no consumer-project identity is encoded in Parwana's features.
# This boundary is intended to become the add-on registration seam.
accountability = [
    "dep:csv-accountability",
    "dep:csv-accountability-verify",
    "dep:csv-wire",
    "csv-wire/accountability",
    "dep:serde", "dep:serde_json", "dep:hex",
]

# Chain features
bitcoin = ["client", "dep:csv-bitcoin", "dep:bitcoin", "csv-bitcoin/signet-rest"]
ethereum = ["client", "dep:csv-ethereum", "csv-ethereum/rpc"]
sui = ["client", "dep:csv-sui", "dep:ed25519-dalek", "csv-sui/rpc"]
aptos = ["client", "dep:csv-aptos", "csv-aptos/rpc", "dep:ed25519-dalek"]
solana = ["client", "dep:csv-solana", "csv-solana/rpc"]
all-chains = ["bitcoin", "ethereum", "sui", "aptos", "solana"]

# RPC features for chain queries
rpc = [
    "bitcoin",
    "ethereum",
    "csv-bitcoin/rpc",
    "csv-bitcoin/signet-rest",
    "csv-ethereum/rpc",
]

# Runtime features
tokio = ["dep:tokio"]
async-std = ["dep:async-std"]
wasm = ["dep:wasm-bindgen-futures", "dep:web-sys", "dep:gloo-timers"]

# Storage features
# Re-enables csv-store's native SQLite persistence (its former default feature
# set), now that the dependency is declared with default-features = false.
sqlite = ["dep:csv-store", "csv-store/sqlite", "csv-store/file-storage", "dep:sqlx", "dep:chrono"]
in-memory = []

# Cross-chain persistence (SC-02)
cross-chain-persist = ["dep:csv-storage", "dep:sqlx", "dep:chrono"]

# Runtime coordinator integration (full TransferCoordinator support)
# Portable coordinator core (stores, journal, TransferCoordinator). The concrete
# chain adapters ride along automatically on native targets only: the factory is
# a target-scoped dependency (see below), so `dep:csv-adapter-factory` is a
# no-op on wasm32 and the coordinator runs against an empty, fail-closed
# adapter registry there.
runtime-coordinator = ["dep:csv-storage", "csv-storage/redb", "csv-runtime/persistent", "tokio", "dep:csv-adapter-factory"]

# Wallet / crypto
wallet = ["dep:ed25519-dalek", "dep:bip32", "dep:k256", "dep:tiny-hderive"]

# Supported application-consumer facade used by external wallets and protocol
# consoles. It exposes portable key, encrypted-wallet, and browser-storage
# capabilities without requiring consumers to import implementation crates.
consumer-wallet = [
    "client",
    "wallet",
    "dep:csv-wallet",
    "dep:csv-store",
    "csv-store/browser-storage",
    "csv-store/encrypted-storage",
]

# P2P proof delivery.
# ROADMAP-P2P-001 decision: this remains an SDK opt-in feature. The shipped
# csv-cli does not enable it until P2P consignment delivery has an operator
# runbook and stable CLI workflow; see csv-docs/CONCEPTS.md "future" table.
p2p = ["dep:csv-p2p"]

# Native-only features (require non-wasm32 target)
# Enables dirs (filesystem access), tokio full runtime, and chain adapters
# that depend on C libraries (c-kzg, etc.)
native = ["dep:dirs"]

# Experimental features
experimental = ["client"]

[dev-dependencies]
rand = "0.8"
tempfile = "3"
csv-store = { version = "0.1.5", path = "../csv-store" }
csv-testkit = { version = "0.1.5", path = "../csv-testkit" }

[lints]
workspace = true
