[package]
name = "csv-storage"
version = "0.1.5"
edition = "2024"
rust-version.workspace = true
description = "CSV Storage - Persistence abstractions and implementations"

[dependencies]
csv-hash = { version = "0.1.5", path = "../csv-hash" }
csv-proof = { version = "0.1.5", path = "../csv-proof" }
csv-protocol = { version = "0.1.5", path = "../csv-protocol" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4.3"
tokio = { version = "1", features = ["rt", "macros", "sync"] }
redb = { version = "4.1", optional = true }
sqlx = { version = "0.8", optional = true, features = ["postgres", "_rt-tokio", "tls-rustls", "chrono"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }

[[test]]
name = "redb_replay"
path = "tests/redb_replay.rs"
required-features = ["redb"]

[features]
default = ["redb"]
redb = ["dep:redb"]
postgres = ["dep:sqlx"]
[lints]
workspace = true
