[package]
name = "csv-testkit"
version = "0.1.0"
edition = "2024"
description = "CSV Testkit - Testing utilities and shared fixtures"

[dependencies]
csv-protocol = { path = "../csv-protocol" }
csv-hash = { path = "../csv-hash" }
csv-codec = { path = "../csv-codec" }
csv-proof = { path = "../csv-proof" }
csv-verifier = { path = "../csv-verifier" }
csv-storage = { path = "../csv-storage" }
csv-runtime = { path = "../csv-runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }

[[test]]
name = "adversarial_integration"
path = "tests/adversarial_integration.rs"
