[package]
name = "csv-testkit"
version = "0.1.0"
edition = "2024"
description = "CSV Testkit - Testing utilities and shared fixtures"

[dependencies]
csv-protocol = { path = "../csv-protocol" }
csv-hash = { path = "../csv-hash" }
csv-codec = { path = "../csv-codec" }
csv-proof = { path = "../csv-proof" }
csv-verifier = { path = "../csv-verifier" }
csv-adapter-core = { path = "../csv-adapters/csv-adapter-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = "2.0"
hex = "0.4"
k256 = "0.13"
rand = "0.8"
sha2 = "0.10"

[dev-dependencies]
csv-storage = { path = "../csv-storage", default-features = false }
csv-runtime = { path = "../csv-runtime" }
tokio = { version = "1", features = ["rt", "macros", "time"] }

[[test]]
name = "adversarial_integration"
path = "tests/adversarial_integration.rs"
