[package]
name = "csv-testkit"
version = "0.1.5"
edition = "2024"
rust-version.workspace = true
description = "CSV Testkit - Testing utilities and shared fixtures"

[dependencies]
csv-protocol = { version = "0.1.5", path = "../csv-protocol" }
csv-hash = { version = "0.1.5", path = "../csv-hash" }
csv-codec = { version = "0.1.5", path = "../csv-codec" }
csv-proof = { version = "0.1.5", path = "../csv-proof" }
csv-verifier = { version = "0.1.5", path = "../csv-verifier" }
csv-chain-ports = { version = "0.1.5", path = "../csv-chain-ports" }
csv-accountability = { version = "0.1.5", path = "../csv-accountability" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = "2.0"
hex = "0.4"
k256 = "0.13"
rand = "0.8"
sha2 = "0.10"

[dev-dependencies]
csv-storage = { version = "0.1.5", path = "../csv-storage", default-features = false }
csv-runtime = { version = "0.1.5", path = "../csv-runtime" }
tokio = { version = "1", features = ["rt", "macros", "time"] }

[[test]]
name = "adversarial_integration"
path = "tests/adversarial_integration.rs"

[[test]]
name = "conformance_corpus"
path = "tests/conformance_corpus.rs"
