[package]
name = "csv-verifier"
version = "0.1.5"
edition = "2024"
description = "CSV Verifier - Canonical verifier with unified proof verification"

[dependencies]
csv-proof = { path = "../csv-proof" }
csv-hash = { path = "../csv-hash" }
csv-codec = { path = "../csv-codec" }
csv-protocol = { path = "../csv-protocol" }
thiserror = "1.0"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
# Used to canonicalize secp256k1 verifier keys for approved-signer binding
# (VERIFY-SIGNER-BINDING-001).
secp256k1 = { version = "0.28" }

[dev-dependencies]
secp256k1 = { version = "0.28", features = ["rand-std"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

[lints]
workspace = true
