[package]
name = "csv-wallet"
version = "0.1.0"
edition = "2024"
description = "CSV Wallet - Unified wallet abstraction with Signer trait"

[dependencies]
csv-hash = { path = "../csv-hash", features = ["serde"] }
csv-protocol = { path = "../csv-protocol" }
csv-keys = { path = "../csv-keys" }
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = "1.5"
secrecy = { version = "0.8", features = ["serde"] }
log = "0.4"
getrandom = "0.2"
hex = "0.4"
secp256k1 = { version = "0.28", features = ["rand-std"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[features]
default = []
wasm = ["getrandom/js"]
# Post-quantum signing (ML-DSA-65 / FIPS 204). Forwards to csv-protocol's `pq`
# feature, which owns the pqcrypto-dilithium implementation. Without this
# feature every MlDsa65 wallet surface fails closed (PQ-MLDSA-001).
pq = ["csv-protocol/pq"]
