[package]
name = "csv-wire"
version = "0.1.5"
edition = "2024"
rust-version = "1.95"

[dependencies]
csv-algebra = { path = "../csv-algebra" }
csv-protocol = { path = "../csv-protocol" }
csv-hash = { path = "../csv-hash" }
csv-codec = { path = "../csv-codec" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

[features]
default = []
