[package]
name = "csv-adapter-core"
version = "0.1.5"
edition = "2024"

[dependencies]
csv-protocol = { path = "../../csv-protocol" }
csv-hash = { path = "../../csv-hash" }
csv-proof = { path = "../../csv-proof" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2.0"
