[package]
name = "csv-adapter-core"
version = "0.1.5"
edition = "2024"
rust-version.workspace = true

[dependencies]
csv-protocol = { version = "0.1.5", path = "../../csv-protocol" }
csv-hash = { version = "0.1.5", path = "../../csv-hash" }
csv-proof = { version = "0.1.5", path = "../../csv-proof" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2.0"
