[package]
name = "csv-aptos"
version = "0.1.0"
edition = "2024"
description = "Aptos adapter for CSV (Client-Side Validation) with resource-based seals"
license = "MIT OR Apache-2.0"
authors = ["Amin Razavi"]
repository = "https://github.com/Diewan/csv-protocol"
homepage = "https://github.com/Diewan/csv-protocol"
documentation = "https://docs.rs/csv-aptos"
readme = "README.md"
keywords = ["aptos", "blockchain", "cryptography", "csv-validation", "move"]
categories = ["cryptography::cryptocurrencies"]
publish = true
rust-version = "1.95"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
csv-adapter-core = { path = "../csv-adapter-core" }
csv-protocol = { path = "../../csv-protocol" }
csv-verifier = { path = "../../csv-verifier" }
csv-proof = { path = "../../csv-proof" }
csv-hash = { path = "../../csv-hash" }
csv-wire = { path = "../../csv-wire" }
csv-keys = { path = "../../csv-keys" }
csv-wallet = { path = "../../csv-wallet" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4.3"
sha2 = "0.10"
sha3 = "0.10"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
base64 = "0.22"
secrecy = "0.8"
blst = { version = "0.3", optional = true }

# Native Aptos SDK (required per Phase 3)
aptos-sdk = { version = "0.5", optional = true }
aptos-bcs = "0.1"
bcs = "0.1"

# Async runtime - tokio for native, wasm-bindgen-futures for wasm32
tokio = { version = "1", features = ["rt", "time", "macros"], optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
async-trait.workspace = true
rand_core = "0.6"

# Target-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt", "time", "macros"] }
aptos-sdk = "0.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[features]
default = []
# Enables real RPC client (HTTP client for network calls)
rpc = ["tokio/macros", "reqwest"]
# Enables aptos-sdk integration (native only)
native-sdk = ["aptos-sdk"]
# Enables BLS signature verification for anchor verification
bls = ["dep:blst"]
# Dev/mocks feature for test utilities
dev-mocks = []

[dev-dependencies]
rand = "0.8"
tempfile = "3"
