[package]
name = "csv-bitcoin"
version = "0.1.5"
edition = "2024"
description = "Bitcoin adapter for CSV (Client-Side Validation) with UTXO seals and SPV proofs"
license = "MIT OR Apache-2.0"
authors = ["Amin Razavi"]
repository = "https://github.com/Diewan/csv-protocol"
homepage = "https://github.com/Diewan/csv-protocol"
documentation = "https://docs.rs/csv-bitcoin"
readme = "README.md"
keywords = ["bitcoin", "blockchain", "cryptography", "csv-validation", "utxo"]
categories = ["cryptography::cryptocurrencies"]
publish = true
rust-version = "1.95"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
csv-adapter-core = { path = "../csv-adapter-core" }
csv-protocol = { path = "../../csv-protocol" }
csv-hash = { path = "../../csv-hash" }
csv-verifier = { path = "../../csv-verifier" }
csv-proof = { path = "../../csv-proof" }
csv-wire = { path = "../../csv-wire" }
csv-store = { path = "../../csv-store", optional = true, default-features = false }
csv-keys = { path = "../../csv-keys" }
csv-wallet = { path = "../../csv-wallet" }
async-trait.workspace = true
bitcoin = { version = "0.32", default-features = false, features = ["serde", "rand-std", "std"] }
bitcoin_hashes = "0.14"
bitcoincore-rpc = { version = "0.19", optional = true }
secp256k1 = { version = "0.29", features = ["rand-std", "global-context"] }
esplora-client = { version = "0.11", optional = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt", "time", "macros", "rt-multi-thread"] }
hex = "0.4.3"
sha2 = "0.10"
rand = "0.8"
bip32 = { version = "0.5", features = ["std", "mnemonic"] }
serde_json = { version = "1.0", features = ["std"] }
log = "0.4"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
secrecy = "0.8"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }

[features]
default = []
rpc = ["bitcoincore-rpc", "dep:csv-store", "csv-store?/sqlite"]
signet-rest = ["dep:csv-store", "csv-store?/browser-storage"]
esplora = ["dep:esplora-client"]
production = ["rpc"]
sp1-guest = []
runtime = []

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"

[[example]]
name = "signet_real_tx_demo"
required-features = ["signet-rest"]

[[example]]
name = "signet_funding_addr"
required-features = ["signet-rest"]

[[example]]
name = "signet_fixed_seed"
required-features = ["signet-rest"]
